welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value vaction
  if (we(day) && !vaction) {return "7:00"}
                  ^